<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Searcher</string>
    <string name="hintEnterImageQuery">Image to search</string>
    <string name="lblSearch">Search</string>
    <string name="emptyStr"></string>
    <string name="jsonError">There was an error retrieving results.</string>
    <string name="noResults">Your search returned no results.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="lblAdvFilterOptions">Advanced Filter Options</string>
    <string name="lblColorFilter">Color</string>
    <string name="lblImageSize">Image Size</string>
    <string name="lblImageType">Image Type</string>
    <string name="lblSite">Site</string>
    <string name="dlgOK">OK</string>

    <string-array name="color_filter">
        <item>All</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
    </string-array>
    <string-array name="image_size">
        <item>All</item>
        <item>Icon</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>xLarge</item>
        <item>xxLarge</item>
        <item>Huge</item>
    </string-array>
    <string-array name="image_type">
        <item>All</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item>Lineart</item>
    </string-array>

    <string name="lblSiteToSearch">Site to Search</string>
    <string name="btnSave">Save</string>
    <string name="title_activity_image_details">Details</string>
    <string name="lblImageTitle"></string>
    <string name="lblImageContentDesc"></string>
    <string name="lblFilters">Filters: </string>
    <string name="lblFiltersNone">None</string>

</resources>